force-app/main/default/objects/DevOps_Pipeline_Run__c/DevOps_Pipeline_Run__c.object-meta.xml
<CustomObject>
    <description>One CI/CD pipeline execution.</description>
    <label>DevOps Pipeline Run</label>
    <nameField>
        <displayFormat>RUN-{00000}</displayFormat>
        <label>Pipeline Run ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DevOps Pipeline Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>