force-app/main/default/objects/DevOps_Pipeline_Run__c/fields/Log_Summary__c.field-meta.xml
<CustomField>
    <fullName>Log_Summary__c</fullName>
    <label>Log Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>