force-app/main/default/objects/DevOps_Pipeline_Run__c/fields/Logs_URL__c.field-meta.xml
<CustomField>
    <fullName>Logs_URL__c</fullName>
    <label>Logs URL</label>
    <type>Url</type>
</CustomField>