force-app/main/default/objects/DevOps_Pipeline_Run__c/fields/Pipeline_Name__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Name__c</fullName>
    <label>Pipeline Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>