force-app/main/default/objects/DevOps_Pipeline_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>