force-app/main/default/objects/DevOps_Pipeline_Run__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User Story</label>
    <referenceTo>DevOps_User_Story__c</referenceTo>
    <relationshipLabel>Pipeline Runs</relationshipLabel>
    <relationshipName>Pipeline_Runs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>